<resources>
    <string name="app_name">BiometricAuthFrontend</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="empty_username_error">Username field cannot be empty</string>
    <string name="empty_email_error">Email field cannot be empty</string>
    <string name="invalid_email_error">Invalid Email</string>
    <string name="empty_password_error">Password field cannot be empty</string>
    <string name="short_password_error">Password field must contain at least 8 characters</string>
    <string name="password_match_error">Password do not match</string>
    <string name="login_title">Login</string>
    <string name="login_action">Login!</string>
    <string name="biometric_login_action">Use Biometric Authentication</string>
    <string name="register_title">Register</string>
    <string name="register_action">Register!</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="register_new_account_action">Register a new account!</string>
    <string name="server_unreachable_error">Server is unreachable…try later</string>
    <string name="login_credentials_error">No active account found with the given credentials…</string>
    <string name="registration_ok">You can now login using you Username and Password…</string>
    <string name="title_warning_dialog">Warning!</string>
    <string name="title_info_dialog">Information</string>
    <string name="user_navigation_entry">User</string>
    <string name="settings_navigation_entry">Settings</string>
    <string name="preference_title">Settings</string>
    <string name="theme_preference_title">Theme</string>
    <string name="theme_preference_summary">Set the application theme.</string>
    <string name="biometric_preference_title">Biometrics</string>
    <string name="biometric_preference_summary">Enable biometrics authentication.</string>
    <string name="theme_values_follow_system_settings">Follow System Settings</string>
    <string name="theme_values_use_light_theme">Light Theme</string>
    <string name="theme_values_use_dark_theme">Dark Theme</string>
    <string name="general_preference_category">General</string>
    <string name="exit_confirm_title">Exit?</string>
    <string name="exit_confirm_message">Are you sure you want to quit?</string>
    <string name="user_info_title">User Info</string>
    <string name="session_end">Session Has Ended</string>
    <string name="session_expired_message">Session has expired…please login…</string>
    <string name="session_logout_message">You are now logged out…</string>
    <string name="biometric_prompt_login_title">Log-In</string>
    <string name="biometric_prompt_login_subtitle">Authenticate to Log-In</string>
    <string name="biometric_prompt_cancel">Cancel</string>
    <string name="biometric_prompt_challenge_title">Sign</string>
    <string name="biometric_prompt_challenge_subtitle">Authenticate to verify user credentials</string>
    <string name="biometric_enroll_complete">You can now Log-In without Username/Password</string>
    <string name="biometric_verification_failed">Invalid signature detected…</string>
    <string name="expired_biometric_token">Session has expired…Please Log-In and enroll again…</string>
    <string name="corrupted_biometric_token">Biometric token has been corrupted…Please Log-In and enroll again…</string>
</resources>