<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LoginUsernameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:startIconDrawable="@drawable/ic_account_circle_24px"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/username_hint"
                android:autofillHints="username"
                android:importantForAutofill="yes"
                android:maxLines="1"
                android:ellipsize="end"
                android:inputType="text"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LoginPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24px"
            android:paddingBottom="16dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:importantForAutofill="yes"
                android:textSize="20sp"
                android:hint="@string/password_hint"
                android:maxLines="1"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/LoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_action" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/BiometricLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biometric_login_action"
                android:visibility="gone"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/RegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_new_account_action" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/LoginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
</RelativeLayout>