<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RegisterUsernameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:startIconDrawable="@drawable/ic_account_circle_24px"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/username_hint"
                android:autofillHints="username"
                android:importantForAutofill="yes"
                android:maxLines="1"
                android:ellipsize="end"
                android:inputType="text"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RegisterEmailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:startIconDrawable="@drawable/ic_email_24px"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/email_hint"
                android:autofillHints="email"
                android:importantForAutofill="yes"
                android:maxLines="1"
                android:ellipsize="end"
                android:inputType="textEmailAddress"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RegisterPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24px"
            android:paddingBottom="16dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:hint="@string/password_hint"
                android:maxLines="1"
                android:ellipsize="end"
                android:scrollHorizontally="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RegisterPasswordConfirmTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24px"
            android:paddingBottom="16dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:hint="@string/confirm_password_hint"
                android:maxLines="1"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegisterActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_action" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/RegisterProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
</RelativeLayout>